--- a/src/app/certificados/pages/page-list/page-list.component.html
+++ b/src/app/certificados/pages/page-list/page-list.component.html
@@ -27,8 +27,8 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="alignButton">
-          <button mat-icon-button color="primary" matTooltip="EDITAR">
-            <mat-icon>edit</mat-icon>
+          <button mat-icon-button color="primary" matTooltip="VER CERTIFICADO">
+            <mat-icon color="sucess">preview</mat-icon>
           </button>
           <button
             mat-icon-button
