--- a/src/app/categorias/pages/page-list/page-list.component.html
+++ b/src/app/categorias/pages/page-list/page-list.component.html
@@ -3,7 +3,7 @@
   <ng-scrollbar class="heightMaxScrollBar">
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
           <button
             mat-icon-button
