--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -25,7 +25,7 @@
   <div class="modal-content-container">
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton"></td>
       </ng-container>
     </cer-table>
