--- a/src/app/certificados/pages/page-list/page-list.component.html
+++ b/src/app/certificados/pages/page-list/page-list.component.html
@@ -25,9 +25,14 @@
 
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
-          <button mat-icon-button color="primary" matTooltip="VER CERTIFICADO">
+          <button
+            mat-icon-button
+            color="primary"
+            matTooltip="VER CERTIFICADO"
+            (click)="openCertificate(row.url_gen_cer)"
+          >
             <mat-icon color="sucess">preview</mat-icon>
           </button>
           <button
