--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -24,10 +24,10 @@
 
   <div class="modal-content-container">
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
-      <ng-container matColumnDef="actions">
+      <!-- <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton"></td>
-      </ng-container>
+      </ng-container> -->
     </cer-table>
 
     <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
